# ModelView

app/: build.gradle
app/src/androidTest/java/org/maadlabs/modelshow/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/org/maadlabs/modelshow/: MainActivity.java
app/src/main/java/org/maadlabs/modelshow/opengl/: MyRenderer.java  Utils.java
app/src/main/java/org/maadlabs/modelshow/opengl/model/: Triangle.java
app/src/main/res/raw/: basic_fragment_shader.glsl
app/src/main/res/values/: strings.xml
app/src/test/java/org/maadlabs/modelshow/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
